sample/disk/diskpv.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: simplediskns
  name: disk-pv-pod
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        environment: development
      annotations:
        backup.velero.io/backup-volumes: disk-pv-storage
    spec:
      containers:
      - name: nginx
        image: nginx
        lifecycle:
          postStart:
            exec:
               command: ["/bin/sh", "-c", "echo RoshithDiskPVTest > /usr/share/nginx/html/index.html"]
        ports:
        - name: nginx-port
          containerPort: 80
        volumeMounts:
        - name: disk-pv-storage
          mountPath: "/usr/share/nginx/html"
      volumes:
        - name: disk-pv-storage
          persistentVolumeClaim:
            claimName: disk-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: mydiskpvsimple54
  namespace: simplediskns
  name: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
