sample/disk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silkroute-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: www.silkroute.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
