sample/disk/twoapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-back
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-back
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      containers:
      - name: azure-vote-back
        image: redis
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
  namespace: default
spec:
  selector:
    app: azure-vote-back
  ports:
    - port: 6379
      targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-front
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      containers:
      - name: azure-vote-front
        image: mahmoudtimoumi/azure-vote-front:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: default
spec:
  selector:
    app: azure-vote-front
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-vote-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - "/vote"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silkroute-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-vote-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - www.silkroute.shop
    secretName: silkroute-tls
  rules:
  - host: www.silkroute.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
      - path: /vote
        pathType: Prefix
        backend:
          service:
            name: azure-vote-front
            port:
              number: 80
